--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family:'Roboto', sans-serif ;
+  font-family: "Roboto", sans-serif;
   /* font-family: 'Baloo Bhai 2', cursive;
 font-family: 'Bree Serif', serif;
 font-family: 'Roboto', sans-serif; */
 }
+body {
+  background-color: rgb(189, 189, 245);
+}
 .container {
-  background-color: rgb(174, 174, 218);
+  background-color: rgb(189, 189, 245);
+  margin-top: 10px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -27,6 +31,9 @@ font-family: 'Roboto', sans-serif; */
   margin: auto;
   line-height: 2.1rem;
 }
+.card h3 {
+  color: rgb(65, 55, 55);
+}
 .card-buttons {
   margin-bottom: 20px;
   display: flex;
@@ -35,7 +42,7 @@ font-family: 'Roboto', sans-serif; */
 .card-buttons a {
   text-decoration: none;
 }
-.card P{
+.card P {
   color: rgb(121, 121, 115);
 }
 table,
@@ -44,4 +51,27 @@ th,
 td {
   border: 1px solid black;
   border-collapse: collapse;
+}
+h1 {
+  text-align: center;
+  margin-bottom: 10px;
+  color: rgb(15, 2, 2);
+}
+.center {
+  width: 30%;
+}
+form {
+  display: flex;
+  justify-content: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 30%;
+  margin: auto;
+  background-color: white;
+}
+input {
+  width: 100%;
+  padding: 0.7rem;
+  font-size: 1.7rem;
+  border: none;
+  outline: none;
 }
