--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ td {
 h1 {
   text-align: center;
   margin-bottom: 10px;
-  color: rgb(15, 2, 2);
+  color: rgb(97, 88, 88);
 }
 .center {
   width: 30%;
@@ -91,16 +91,31 @@ input {
   background-color: #10033f;
   cursor: pointer;
 }
-.page-btn p{
-  margin:10px 10px;
-  
+.page-btn p {
+  margin: 10px 10px;
 }
 @media screen and (max-width: 768px) {
-  .container{
+  .container {
     width: 100%;
   }
-  .container .card{
+  .container .card {
     width: 70%;
-    margin:auto;
+    margin: auto;
+  }
+  form {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .container {
+    width: 100%;
+  }
+  .container .card {
+    width: 90%;
+    font-size: 0.7rem;
+    margin: auto;
+  }
+  form {
+    width: 80%;
   }
 }
